--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
 				<a href="single.html"><img src="images/a1.jpg" class="img-responsive" alt=""/></a>
 			</div>
 			<div class="col-sm-8 row_1">
-				<h4><a href="single.html">It is a long established fact</a></h4>
-				<h6>SIt is a long <span class="dot">·</span> Jul. 31, 2015</h6>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+				<h4><a href="single.html">It is a long established fact over the scope of jobs</a></h4>
+				<h6>SIt is a long <span class="dot">·</span> Jul. 31, 2021</h6>
+				<p>Getting job is getting difficult over the years has been difficult and has been changing over the years for future improvement</p>
 				<div class="social">	
 					<a class="btn_1" href="#">
 						<i class="fa fa-facebook fb"></i>
@@ -377,9 +377,12 @@
 				<a href="single.html"><img src="images/a2.jpg" class="img-responsive" alt=""/></a>
 			</div>
 			<div class="col-sm-8 row_1">
-				<h4><a href="single.html">Lorem Ipsum is simply dummy</a></h4>
-				<h6>SIt is a long <span class="dot">·</span> Jul. 31, 2015</h6>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+				<h4><a href="single.html">Planing and practicsing for future jobs and recruitment </a></h4>
+				<h6>SIt is a long <span class="dot">·</span> Aug. 31, 2021</h6>
+				<p> You should write your tasks in a schedule.Designing has to be in a way that each task gets enough time. Your work should have the highest priority. The second priority should sleep. 
+And the last but not the least your social life. Your social life includes family and friends.
+In order to live a happy and peaceful life socializing is important. Too much workload can make a person ill. So, give your mind a little rest.
+Spending time with family can help you with this. Moreover, the main purpose to work is to fulfill the needs of the family</p>
 				<div class="social">	
 					<a class="btn_1" href="#">
 						<i class="fa fa-facebook fb"></i>
@@ -402,9 +405,11 @@
 				<a href="single.html"><img src="images/a3.jpg" class="img-responsive" alt=""/></a>
 			</div>
 			<div class="col-sm-8 row_1">
-				<h4><a href="single.html">There are many variations</a></h4>
-				<h6>SIt is a long <span class="dot">·</span> Jul. 31, 2015</h6>
-				<p>YBut I must explain to you how all this mistaken idea of denouncing pleasure.</p>
+				<h4><a href="single.html">There are many variations and choosing the best job for your favourite career </a></h4>
+				<h6>SIt is a long <span class="dot">·</span> Oct. 31, 2020</h6>
+				<p>Career is the most important part of one’s life. To put bread on your dining table, to gain respect from the society and for your self-satisfaction, a good career is a must. But the definition of “good career” is vague and depends on people to people.
+There is no such thing called as a good career. A career path that is good for me might not be necessarily good for others. 
+Therefore, in this particular essay on career, we would like to dig deep and understand what a career is and how to choose one in order to lead a happy and content life..</p>
 				<div class="social">	
 					<a class="btn_1" href="#">
 						<i class="fa fa-facebook fb"></i>
@@ -427,9 +432,11 @@
 				<a href="single.html"><img src="images/a4.jpg" class="img-responsive" alt=""/></a>
 			</div>
 			<div class="col-sm-8 row_1">
-				<h4><a href="single.html">Contrary to popular belief</a></h4>
-				<h6>SIt is a long <span class="dot">·</span> Jul. 31, 2015</h6>
-				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti.</p>
+				<h4><a href="single.html">Contrary to popular belief and myths about getting a job</a></h4>
+				<h6>SIt is a long <span class="dot">·</span> Nov. 31, 2020</h6>
+				<p>Figuring out how to find work can feel like an epic quest, full of smoke, mirrors, and plenty of perplexities—including some falsehoods that are meant to throw you off your game. 
+					These job search myths are tricky beasts. Even experienced job seekers believe—and spread—common misconceptions about the job search process. 
+					Yet these flawed ideas can derail your ability to nab a job offer.</p>
 				<div class="social">	
 					<a class="btn_1" href="#">
 						<i class="fa fa-facebook fb"></i>
@@ -452,9 +459,12 @@
 				<a href="single.html"><img src="images/a5.jpg" class="img-responsive" alt=""/></a>
 			</div>
 			<div class="col-sm-8 row_1">
-				<h4><a href="single.html">At vero eos et accusamus</a></h4>
+				<h4><a href="single.html">Work Culture </a></h4>
 				<h6>SIt is a long <span class="dot">·</span> Jul. 31, 2015</h6>
-				<p>On the other hand, we denounce with righteous indignation and dislike men.</p>
+				<p>When choosing a job or trying to maintain effective operations, it's important to consider the work environment of a company, which is the collection of situational factors that form the corporate atmosphere.
+					While a positive office atmosphere can improve your morale, a negative one can demotivate you.
+					Learning about this important workplace feature can help you to identify a healthy environment. 
+					To discover the key features of the work environment, its importance, and successful types, consider this article.</p>
 				<div class="social">	
 					<a class="btn_1" href="#">
 						<i class="fa fa-facebook fb"></i>
@@ -477,9 +487,11 @@
 				<a href="single.html"><img src="images/a6.jpg" class="img-responsive" alt=""/></a>
 			</div>
 			<div class="col-sm-8 row_1">
-				<h4><a href="single.html">On the other hand</a></h4>
+				<h4><a href="single.html">Jobs vs Market</a></h4>
 				<h6>SIt is a long <span class="dot">·</span> Jul. 31, 2015</h6>
-				<p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+				<p>The job market can grow or shrink depending on the demand for labor and the available supply of workers within the overall economy. 
+					Other factors which impact the market are the needs of a specific industry, the need for a particular education level or skill set, and required job functions. 
+					The job market is a significant component of any economy and is directly tied in with the demand for goods and services.</p>
 				<div class="social">	
 					<a class="btn_1" href="#">
 						<i class="fa fa-facebook fb"></i>
