--- a/login.html
+++ b/login.html
@@ -160,7 +160,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	   	  		<li><a href="#">Intelligence Bureau Jobs</a></li>		
 	   	  		<li><a href="#">Army Jobs</a></li>
 	   	  		<li><a href="#">Navy Jobs</a></li>		
-	   	  		<li><a href="#">BSNL Jobs</a></li>
 	   	  		<li><a href="#">Software Jobs</a></li>	
 	   	  		<li><a href="#">Research Jobs</a></li>								
 	   	  	</ul>
@@ -244,7 +243,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="clearfix"> </div></a>
 							<div class="clearfix"> </div>
 						</div>
-						<h4>Don,t have an Account? <a href="register.html"> Register Now!</a></h4>
+						<h4>Don't have an Account? <a href="register.html"> Register Now!</a></h4>
 					 </div>
 		           </div>
                 </div>
