--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@
 	   	  		<li><a href="#">Intelligence Bureau Jobs</a></li>		
 	   	  		<li><a href="#">Army Jobs</a></li>
 	   	  		<li><a href="#">Navy Jobs</a></li>		
-	   	  		<li><a href="#">BSNL Jobs</a></li>
 	   	  		<li><a href="#">Software Jobs</a></li>	
 	   	  		<li><a href="#">Research Jobs</a></li>								
 	   	  	</ul>
@@ -531,23 +530,14 @@ Therefore, in this particular essay on career, we would like to dig deep and und
 			</ul>
 			<div class="clearfix"> </div>
 		</div>
-		<div class="col-md-3 grid_3">
-			<h4>Twitter Widget</h4>
-			<div class="footer-list">
-			  <ul>
-				<li><i class="fa fa-twitter tw1"> </i><p><span class="yellow"><a href="#">consectetuer</a></span> adipiscing elit web design</p></li>
-				<li><i class="fa fa-twitter tw1"> </i><p><span class="yellow"><a href="#">consectetuer</a></span> adipiscing elit web design</p></li>
-				<li><i class="fa fa-twitter tw1"> </i><p><span class="yellow"><a href="#">consectetuer</a></span> adipiscing elit web design</p></li>
-			  </ul>
-			</div>
-		</div>
+		
 		<div class="col-md-3 grid_3">
 			<h4>Job Portal</h4>
-			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+			<p>is a global online employment solution for people seeking jobs and the employers who need great people.   </p>
 		</div>
 		<div class="col-md-3 grid_3">
 			<h4>Sign up for our newsletter</h4>
-			<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.</p>
+			<p>We'll reach out to you with the latest updates.</p>
 			<form>
 				<input type="text" class="form-control" placeholder="Enter your email">
 				<button type="button" class="btn red">Subscribe now!</button>
@@ -583,11 +573,11 @@ Therefore, in this particular essay on career, we would like to dig deep and und
 	    </ul>
   	</div>
   	<div class="col-sm-6 footer_text">
-       <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numqua"</p>
+       <p>"Closing  to bridge the gap between talent & opportunities and offers end-to-end recruitment solutions.Job_Portal Fair brings candidates and top employers under one roof"</p>
   	</div>
   	<div class="clearfix"> </div>
 	<div class="copy">
-		<p>Copyright © 2018 Job Portal <a href="#" target="_blank"></a> </p>
+		<p>Copyright © 2021 Job Portal <a href="#" target="_blank"></a> </p>
 	</div>
   </div>
 </div>
