--- a/about.html
+++ b/about.html
@@ -46,46 +46,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		            </ul>
 		        </li>
 		        <li class="dropdown">
-		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<b class="caret"></b></a>
-		            <ul class="dropdown-menu multi-column columns-3">
-			            <div class="row">
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-						            <li><a href="services.html">Action</a></li>
-						            <li><a href="services.html">Another action</a></li>
-						            <li><a href="services.html">Something else here</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">Separated link</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">One more separated link</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-						            <li><a href="services.html">Action</a></li>
-						            <li><a href="services.html">Another action</a></li>
-						            <li><a href="services.html">Something else here</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">Separated link</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">One more separated link</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-						            <li><a href="services.html">Action</a></li>
-						            <li><a href="services.html">Another action</a></li>
-						            <li><a href="services.html">Something else here</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">Separated link</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">One more separated link</a></li>
-					            </ul>
-				            </div>
-			            </div>
-		            </ul>
-		        </li>
-		        <li class="dropdown">
 		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recruiters<b class="caret"></b></a>
 		            <ul class="dropdown-menu">
 			            <li><a href="login.html">Recruiter Updates</a></li>
@@ -134,16 +94,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>	
 <div class="container">
     <div class="single">  
-       <h2>Advantages</h2>
+       <h2>About Us</h2>
        <div class="about_top">
 	     <div class="col-md-4 box_7">
   			<div class="list styled custom-list custom-list1">
 				<ul>
 					<li><span class="dropcap">1.</span>  
 					   <div class="item_content">
-						<h5><a href="#">nunc nobis videntur parum</a></h5> 
-						<p> anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur paru.</p>
-						<p class="m_1">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
+						<h5><a href="#">Our Aim</a></h5> 
+						<p> Job_Portal strives to put job seekers first, giving them free access to search for jobs, post resumes, and research companies. Every day, we connect millions of people to new opportunities.</p>
 					   </div>
 					</li>
 			    </ul>
@@ -154,9 +113,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul>
 					<li><span class="dropcap">2.</span>  
 					   <div class="item_content">
-						<h5><a href="#">nunc nobis videntur parum</a></h5> 
-						<p> anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur paru.</p>
-						<p class="m_1">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
+						<h5><a href="#">Our Vision</a></h5> 
+						<p> Every day, Job_Portal aims to make every workplace happier and more productive by transforming the way employers and candidates find the right fit. For 25 years, Job_Portal has worked to transform the recruiting industry</p>
 					   </div>
 					</li>
 			    </ul>
@@ -167,10 +125,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul>
 					<li><span class="dropcap">3.</span>  
 					   <div class="item_content">
-						<h5><a href="#">nunc nobis videntur parum</a></h5> 
-						<p> anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur paru.</p>
-						<p class="m_1">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</p>
-					   </div>
+						<h5><a href="#">Our Goal</a></h5> 
+						<p>  Job_Portal is a company that was created out of a passion to help candidates see their vision come to life by creating infrastructures that support personal development and growth through strategic customer focus.</p>
+						</div>
 					</li>
 			    </ul>
 			</div>
@@ -191,13 +148,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   	 				<img src="images/f5.jpg" class="img-responsive" alt=""/>
 				   	 			</li>
 				   	 			<li class="grid-1_right">
-				   	 				<p>Garcinia cambogia is one of the main 
-										components in one of the best-selling 
-										supplemental weight loss products, 
-										Hydroxycut., and researchers have 
-										concluded that "the evidence for G. 
-										cambogia is not compelling.</p>
-								      <h4><a href="#">annette Doe</a> | Abc Company</h4>
+				   	 				<p>“Job_Portal was awesome!!. The team helped me through my career choice. I had a problem with getting a job a Full Stack Developer, but they took care of it right away..</p>
+								      <h4><a href="#">annette Doe</a> | Wroks at Microsoft</h4>
 				   	 			</li>
 				   	 			<div class="clearfix"> </div>
 				   	 		</ul>
@@ -210,13 +162,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   	 				<img src="images/f6.jpg" class="img-responsive" alt=""/>
 				   	 			</li>
 				   	 			<li class="grid-1_right">
-				   	 				<p>Garcinia cambogia is one of the main 
-										components in one of the best-selling 
-										supplemental weight loss products, 
-										Hydroxycut., and researchers have 
-										concluded that "the evidence for G. 
-										cambogia is not compelling.</p>
-								      <h4><a href="#">annette Doe</a> | Abc Company</h4>
+				   	 				<p>The Job_Portal was quick, courteous and very helpful. They helped me restore my knowledge and understanding completely after putting in my deck. I was worried it wouldn’t be done in time for my graduation, but they found me a job within time.</p>
+								      <h4><a href="#">annette Doe</a> | Works in Digitran</h4>
 				   	 			</li>
 				   	 			<div class="clearfix"> </div>
 				   	 		</ul>
@@ -229,13 +176,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   	 				<img src="images/f7.jpg" class="img-responsive" alt=""/>
 				   	 			</li>
 				   	 			<li class="grid-1_right">
-				   	 				<p>Garcinia cambogia is one of the main 
-										components in one of the best-selling 
-										supplemental weight loss products, 
-										Hydroxycut., and researchers have 
-										concluded that "the evidence for G. 
-										cambogia is not compelling.</p>
-								      <h4><a href="#">annette Doe</a> | Abc Company</h4>
+				   	 				<p>When I discovered Job_portal, they were immediately got in touch with me. We saw significant improvements right away and, after a 3 week training, I was able to get a job</p>
+								      <h4><a href="#">annette Doe</a> | Works in Ubisoft</h4>
 				   	 			</li>
 				   	 			<div class="clearfix"> </div>
 				   	 		</ul>
@@ -259,9 +201,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<h3>Our Team</h3>
 	    <div class="col-md-3 team-member text-center">
 		    <img src="images/f9.jpg" class="img-responsive img-circle1" alt=""/>
-			<h5>blanditiis iusto</h5>
-			<h6>Account Manager</h6>
-			<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.</p>
+			<h5>C Prithvi Raj/h5>
+			<h6>Software Developer </h6>
+			<p>If you're just curious about my story, or you just want to grab my résumé, you're in the right spot.</p>
 			<a href="#"><i class="fa fa-facebook fa1"> </i></a>
 			<a href="#"><i class="fa fa-twitter fa1"> </i></a>
 			<a href="#"><i class="fa fa-linkedin fa1"> </i></a>
@@ -269,9 +211,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-3 team-member text-center">
 			<img src="images/f8.jpg" class="img-responsive img-circle1" alt=""/>
-			<h5>blanditiis iusto</h5>
-			<h6>Account Manager</h6>
-			<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.</p>
+			<h5>Debjit Das</h5>
+			<h6>Software Developer </h6>
+			<p>Loves Coding and Developing Projects</p>
 			<a href="#"><i class="fa fa-facebook fa1"> </i></a>
 			<a href="#"><i class="fa fa-twitter fa1"> </i></a>
 			<a href="#"><i class="fa fa-linkedin fa1"> </i></a>
@@ -279,9 +221,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-3 team-member text-center">
 		    <img src="images/f10.jpg" class="img-responsive img-circle1" alt=""/>
-			<h5>blanditiis iusto</h5>
-			<h6>Account Manager</h6>
-			<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.</p>
+			<h5>Creflo Asir Joel</h5>
+			<h6>Software Developer</h6>
+			<p>I Exist</p>
 			<a href="#"><i class="fa fa-facebook fa1"> </i></a>
 			<a href="#"><i class="fa fa-twitter fa1"> </i></a>
 			<a href="#"><i class="fa fa-linkedin fa1"> </i></a>
@@ -289,9 +231,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-3 team-member text-center">
 	        <img src="images/f7.jpg" class="img-responsive img-circle1" alt=""/>
-			<h5>blanditiis iusto</h5>
-			<h6>Account Manager</h6>
-			<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.</p>
+			<h5>Pranav Sharan</h5>
+			<h6>Software Developer</h6>
+			<p>I'm dev and you know what i do</p>
 			<a href="#"><i class="fa fa-facebook fa1"> </i></a>
 			<a href="#"><i class="fa fa-twitter fa1"> </i></a>
 			<a href="#"><i class="fa fa-linkedin fa1"> </i></a>
@@ -330,11 +272,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-3 grid_3">
 			<h4>Job Portal</h4>
-			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+			<p>Job_Portal is a global online employment solution for people seeking jobs and the employers who need great people.</p>
 		</div>
 		<div class="col-md-3 grid_3">
 			<h4>Sign up for our newsletter</h4>
-			<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.</p>
+			<p>Get updated with Latest news!!</p>
 			<form>
 				<input type="text" class="form-control" placeholder="Enter your email">
 				<button type="button" class="btn red">Subscribe now!</button>
@@ -349,14 +291,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   		<ul class="f_list2">
 			<li><a href="jobs.html">Russia Jobs</a></li>
 			<li><a href="jobs.html">Australia Jobs</a></li>
-			<li><a href="jobs.html">Srilanka Jobs</a></li>
+			
 			<li><a href="jobs.html">Poland Jobs</a></li>
 	    </ul>
   	</div>
   	<div class="col-sm-2">
   		<ul class="f_list2">
 			<li><a href="jobs.html">New Zealand Jobs</a></li>
-			<li><a href="jobs.html">Pakistan Jobs</a></li>
+			
 			<li><a href="jobs.html">Srilanka Jobs</a></li>
 			<li><a href="jobs.html">Irland Jobs</a></li>
 	    </ul>
@@ -365,16 +307,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   		<ul class="f_list2">
 			<li><a href="jobs.html">Canada Jobs</a></li>
 			<li><a href="jobs.html">Germany Jobs</a></li>
-			<li><a href="jobs.html">China Jobs</a></li>
+			
 			<li><a href="jobs.html">Nepal Jobs</a></li>
 	    </ul>
   	</div>
   	<div class="col-sm-6 footer_text">
-       <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numqua"</p>
+       <p>"closely to bridge the gap between talent & opportunities and offers end-to-end recruitment solutions.Job_Portal Fair brings candidates and top employers under one roof""</p>
   	</div>
   	<div class="clearfix"> </div>
 	<div class="copy">
-		<p>Copyright © 2018 Job Portal  <a href="#" target="_blank"></a> </p>
+		<p>Copyright © 2021 Job Portal  <a href="#" target="_blank"></a> </p>
 	</div>
   </div>
 </div>
