--- a/jobs_single.html
+++ b/jobs_single.html
@@ -46,46 +46,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		            </ul>
 		        </li>
 		        <li class="dropdown">
-		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<b class="caret"></b></a>
-		            <ul class="dropdown-menu multi-column columns-3">
-			            <div class="row">
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-						            <li><a href="services.html">Action</a></li>
-						            <li><a href="services.html">Another action</a></li>
-						            <li><a href="services.html">Something else here</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">Separated link</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">One more separated link</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-						            <li><a href="services.html">Action</a></li>
-						            <li><a href="services.html">Another action</a></li>
-						            <li><a href="services.html">Something else here</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">Separated link</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">One more separated link</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-						            <li><a href="services.html">Action</a></li>
-						            <li><a href="services.html">Another action</a></li>
-						            <li><a href="services.html">Something else here</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">Separated link</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">One more separated link</a></li>
-					            </ul>
-				            </div>
-			            </div>
-		            </ul>
-		        </li>
-		        <li class="dropdown">
 		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recruiters<b class="caret"></b></a>
 		            <ul class="dropdown-menu">
 			            <li><a href="login.html">Recruiter Updates</a></li>
@@ -129,14 +89,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <label class="btn2 btn-2 btn2-1b"><input type="submit" value="Find Jobs"></label>
 			</p>
            </div>
-		</div>
+	</div>
    </div> 
 </div>	
 <div class="container">
     <div class="single">  
 	   <div class="col-md-9 single_right">
-	       <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-	       <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+	       <p>"i have limited experience and judgment to plan and accomplish goals. 
+		       Perform a variety of tasks. Lead and direct the work of other team members. A wide degree of creativity and latitude is expected. 
+		       Typically reports to a manager or head of a unit/department.
+		       Enhance department and organization reputation by accepting ownership for accomplishing new and different requests; exploring opportunities to add value to job accomplishments."</p>
+	       <p> </p>
 	       <dl class="experience">
 	       	 <div class="experience_content experience_content1">
 	       	   <div class="experience_period"> 
@@ -144,7 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	       	   </div>
 	       	   <div class="experience_1"><dt><h6>Software Engineer</h6></dt>
 	       		 <dd>
-	       		 	<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
+	       		 	<p>Worked as senior Software Developer in Potato.inc </p>
 	       		 </dd></div>
 	       	   </div>
 	       	   <div class="experience_content">
@@ -153,29 +116,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	       	   	<div class="experience_1">
 	       	   	  <dt><h6>Software Engineer</h6></dt>
 	       	   	  <dd>
-	       	   	  	<p>Nulla ornare diam vel leo pellentesque, at iaculis sem sagittis. Vestibulum quam ante, convallis ac dignissim vel, venenatis id risus. Quisque posuere sem vitae placerat feugiat.</p>
+	       	   	  	<p>Worked as major Developer in Eggplant.inc</p>
 	       		  </dd>
 	       		</div>
 	       	   </div>
 	       </dl>
-	       <div class="comments">
-	      	<h6>Comments</h6>
-			<div class="media media_1">
-			  <div class="media-left"><a href="#"> </a></div>
-			  <div class="media-body">
-			    <h4 class="media-heading"><a class="author" href="#">Sollicitudin</a><a class="reply" href="#">Reply</a><div class="clearfix"> </div></h4>
-			    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-			  </div>
-			  <div class="clearfix"> </div>
-			</div>
-			<div class="media">
-			  <div class="media-left"><a href="#"> </a></div>
-			  <div class="media-body">
-			    <h4 class="media-heading"><a class="author" href="#">Sollicitudin</a><a class="reply" href="#">Reply</a><div class="clearfix"> </div></h4>
-			    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-			  </div>
-			</div>
-		  </div>
+	       
 	      <form>
 			<div class="to">
              	<input type="text" class="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}">
@@ -338,23 +284,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</ul>
 			<div class="clearfix"> </div>
 		</div>
-		<div class="col-md-3 grid_3">
-			<h4>Twitter Widget</h4>
-			<div class="footer-list">
-			  <ul>
-				<li><i class="fa fa-twitter tw1"> </i><p><span class="yellow"><a href="#">consectetuer</a></span> adipiscing elit web design</p></li>
-				<li><i class="fa fa-twitter tw1"> </i><p><span class="yellow"><a href="#">consectetuer</a></span> adipiscing elit web design</p></li>
-				<li><i class="fa fa-twitter tw1"> </i><p><span class="yellow"><a href="#">consectetuer</a></span> adipiscing elit web design</p></li>
-			  </ul>
-			</div>
-		</div>
+
 		<div class="col-md-3 grid_3">
 			<h4>Job Portal</h4>
-			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+			<p>closely to bridge the gap between talent & opportunities and offers end-to-end recruitment solutions. Job_Portal Fair brings candidates and top employers under one roof</p>
 		</div>
 		<div class="col-md-3 grid_3">
 			<h4>Sign up for our newsletter</h4>
-			<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.</p>
+			<p>Sign up and get exciting News everyday.</p>
 			<form>
 				<input type="text" class="form-control" placeholder="Enter your email">
 				<button type="button" class="btn red">Subscribe now!</button>
@@ -369,7 +306,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   		<ul class="f_list2">
 			<li><a href="jobs.html">Russia Jobs</a></li>
 			<li><a href="jobs.html">Australia Jobs</a></li>
-			<li><a href="jobs.html">Srilanka Jobs</a></li>
+			
 			<li><a href="jobs.html">Poland Jobs</a></li>
 	    </ul>
   	</div>
@@ -377,7 +314,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   		<ul class="f_list2">
 			<li><a href="jobs.html">New Zealand Jobs</a></li>
 			<li><a href="jobs.html">Pakistan Jobs</a></li>
-			<li><a href="jobs.html">Srilanka Jobs</a></li>
+			
 			<li><a href="jobs.html">Irland Jobs</a></li>
 	    </ul>
   	</div>
@@ -385,16 +322,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   		<ul class="f_list2">
 			<li><a href="jobs.html">Canada Jobs</a></li>
 			<li><a href="jobs.html">Germany Jobs</a></li>
-			<li><a href="jobs.html">China Jobs</a></li>
+			
 			<li><a href="jobs.html">Nepal Jobs</a></li>
 	    </ul>
   	</div>
   	<div class="col-sm-6 footer_text">
-       <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numqua"</p>
+       <p>"closely to bridge the gap between talent & opportunities and offers end-to-end recruitment solutions.Job_Portal Fair brings candidates and top employers under one roof"</p>
   	</div>
   	<div class="clearfix"> </div>
 	<div class="copy">
-		<p>Copyright © 2018 Job Portal <a href="#" target="_blank"></a> </p>
+		<p>Copyright © 2021 Job Portal <a href="#" target="_blank"></a> </p>
 	</div>
   </div>
 </div>
