--- a/jobs.html
+++ b/jobs.html
@@ -45,53 +45,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			            <li><a href="location.html">Jobs by Company</a></li>
 		            </ul>
 		        </li>
-		        <li class="dropdown">
-		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<b class="caret"></b></a>
-		            <ul class="dropdown-menu multi-column columns-3">
-			            <div class="row">
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-						            <li><a href="services.html">Action</a></li>
-						            <li><a href="services.html">Another action</a></li>
-						            <li><a href="services.html">Something else here</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">Separated link</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">One more separated link</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-						            <li><a href="services.html">Action</a></li>
-						            <li><a href="services.html">Another action</a></li>
-						            <li><a href="services.html">Something else here</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">Separated link</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">One more separated link</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-						            <li><a href="services.html">Action</a></li>
-						            <li><a href="services.html">Another action</a></li>
-						            <li><a href="services.html">Something else here</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">Separated link</a></li>
-						            <li class="divider"></li>
-						            <li><a href="services.html">One more separated link</a></li>
-					            </ul>
-				            </div>
-			            </div>
-		            </ul>
-		        </li>
+		       
 		        <li class="dropdown">
 		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Recruiters<b class="caret"></b></a>
 		            <ul class="dropdown-menu">
 			            <li><a href="login.html">Recruiter Updates</a></li>
 			            <li><a href="recruiters.html">Recruiters you are following</a></li>
-			            <li><a href="codes.html">Shortcodes</a></li>
-		            </ul>
+			     </ul>
 		        </li>
 		        <li class="dropdown">
 		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
@@ -642,23 +602,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</ul>
 			<div class="clearfix"> </div>
 		</div>
-		<div class="col-md-3 grid_3">
-			<h4>Twitter Widget</h4>
-			<div class="footer-list">
-			  <ul>
-				<li><i class="fa fa-twitter tw1"> </i><p><span class="yellow"><a href="#">consectetuer</a></span> adipiscing elit web design</p></li>
-				<li><i class="fa fa-twitter tw1"> </i><p><span class="yellow"><a href="#">consectetuer</a></span> adipiscing elit web design</p></li>
-				<li><i class="fa fa-twitter tw1"> </i><p><span class="yellow"><a href="#">consectetuer</a></span> adipiscing elit web design</p></li>
-			  </ul>
-			</div>
-		</div>
+		
 		<div class="col-md-3 grid_3">
 			<h4>Job Portal</h4>
-			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+			<p>Job Portal closely to bridge the gap between talent & opportunities and offers end-to-end recruitment solutions.Fair brings candidates and top employers under one roof</p>
 		</div>
 		<div class="col-md-3 grid_3">
 			<h4>Sign up for our newsletter</h4>
-			<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.</p>
+			<p>You will get exciting news and updates everyweek!!</p>
 			<form>
 				<input type="text" class="form-control" placeholder="Enter your email">
 				<button type="button" class="btn red">Subscribe now!</button>
@@ -673,14 +624,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   		<ul class="f_list2">
 			<li><a href="jobs.html">Russia Jobs</a></li>
 			<li><a href="jobs.html">Australia Jobs</a></li>
-			<li><a href="jobs.html">Srilanka Jobs</a></li>
+			
 			<li><a href="jobs.html">Poland Jobs</a></li>
 	    </ul>
   	</div>
   	<div class="col-sm-2">
   		<ul class="f_list2">
 			<li><a href="jobs.html">New Zealand Jobs</a></li>
-			<li><a href="jobs.html">Pakistan Jobs</a></li>
+			
 			<li><a href="jobs.html">Srilanka Jobs</a></li>
 			<li><a href="jobs.html">Irland Jobs</a></li>
 	    </ul>
@@ -689,16 +640,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   		<ul class="f_list2">
 			<li><a href="jobs.html">Canada Jobs</a></li>
 			<li><a href="jobs.html">Germany Jobs</a></li>
-			<li><a href="jobs.html">China Jobs</a></li>
+			
 			<li><a href="jobs.html">Nepal Jobs</a></li>
 	    </ul>
   	</div>
   	<div class="col-sm-6 footer_text">
-       <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numqua"</p>
+       <p>"Job Portal closely to bridge the gap between talent & opportunities and offers end-to-end recruitment solutions.Job_Portal Fair brings candidates and top employers under one roof"</p>
   	</div>
   	<div class="clearfix"> </div>
 	<div class="copy">
-		<p>Copyright © 2018 Job Portal <a href="#" target="_blank"></a> </p>
+		<p>Copyright © 2021 Job Portal <a href="#" target="_blank"></a> </p>
 	</div>
   </div>
 </div>
